--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,11 @@
       "request": "launch",
       "program": "${file}",
       "cwd": "${fileDirname}",
-      "port": 9000
+      "port": 9000,
+      "pathMappings": {
+        "C:\\xampp\\htdocs\\test": "${workspaceRoot}"
+      },
+      "runtimeExecutable": "C:\\xampp\\php\\php.exe"
     }
   ]
 }
